syntax = "proto3";

package web;

//////////////////////////////////////////////////

// 错误信息
message error_message {
    int32 err_code = 1;
    string err_msg = 2;
}

